--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,20 +18,107 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # An helper to easily exposes a value using InheritedWidget without having to write one.
+  provider: ^5.0.0
+
+  # a plugin for reading and writing NFC tags in Flutter
+  nfc_in_flutter:
+    git:
+      url: https://github.com/semlette/nfc_in_flutter.git
+  nfc_manager: ^3.1.0
+
+  # Contains utility classes in the style of dart:async to work with asynchronous computations.
+  async: ^2.8.2
+
+  #A  library for creating locks to ensure mutual exclusion when running critical sections of code.
+  mutex: ^3.0.0
+
+  # Simple, fast generation of RFC4122 UUIDs.
+  uuid: ^3.0.4
+
+  # for local database
+  moor: ^4.5.0
+  sqlite3_flutter_libs: ^0.5.0
+
+  # for storage
+  flutter_secure_storage: ^4.2.1
+
+  # path utils
+  path_provider: ^2.0.0
+  path: ^1.8.0
+
+  # image & video
+  image_picker: ^0.8.4-nullsafety
+  photo_view: ^0.12.0
+  video_player: ^2.2.0
+  chewie: ^1.2.2
+
+  # audio
+  flutter_sound: ^8.2.5
+  audio_video_progress_bar: ^0.9.0
+
+  # text editor
+  flutter_quill:
+    git:
+      url: https://github.com/singerdmx/flutter-quill.git
+      ref: 8945379379daa95c6714f69e5fbcaf2243e359b5
+
+  # permission handler
+  permission_handler: ^8.1.6
+
+  # HTTP Requests
+  http: ^0.13.3
+  dio: ^4.0.4
+
+  # Use environment variables
+  flutter_dotenv: ^5.0.2
+
+  # date formatting
+  intl: ^0.17.0
+
+  # logging
+  # crash in published, latest version, therefore we use a temp solution
+  f_logs:
+    git:
+      url: git://github.com/zubairehman/Flogs
+
+  # get current time
+  ntp: ^2.0.0
+
+  # additional widgets
+  flutter_breadcrumb: ^1.0.1
+  align_positioned: ^2.0.4
+  flutter_spinkit: ^5.1.0
+  navigation_history_observer: ^1.1.0
+
+
+
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  flutter_launcher_icons: ^0.9.0
+  moor_generator: ^4.4.1
+  build_runner: ^1.12.2
+
+dependency_overrides:
+  async: ">=2.8.2"
+
+# For information on the generic Dart part of this file, see the
+# following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  android: "launcher_icon"
+  image_path: "assets/icon/iloscom.jpg"
+  adaptive_image_padding: true
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
